<resources>
    <string name="app_name">Thingster</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_main_title">Explore</string>
    <string name="nav_mine_liked_things_title">Matches</string>
    <string name="nav_my_things_title">My things</string>
    <string name="nav_create_item">Create thing</string>
    <string name="nav_liked_things_title">Favorites</string>
    <string name="welcome_to_thingder">Welcome to Thingster</string>
    <string name="you_are_not_authorised">You are not authorised</string>
    <string name="add_thing">Add thing</string>
    <string name="title">Title</string>
    <string name="write_your_post">Write your post...</string>
    <string name="tap_to_add_image">Tap to add image</string>
    <string name="required">Required</string>
    <string name="sign_in_success">Sign In Success</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="register_success">Register Success</string>
    <string name="register_failed">Register Failed</string>
    <string name="register_button">Register</string>
    <string name="sign_in_button">Sign In</string>
    <string name="logout">Logout</string>
    <string name="logout_alert_dialog_title">Logout?</string>
    <string name="logout_alert_dialog_message">Are you sure you want to logout?</string>
    <string name="logout_alert_dialog_pos_btn_text">Yes</string>
    <string name="logout_alert_dialog_neg_btn_text">No</string>
    <string name="logout_success_toast_text">Logout Success</string>
    <string name="create_item_success">Create Item Success!</string>
    <string name="create_item_failure">Create Item Falilure!</string>
    <string name="description">This is item description</string>
    <string name="send_email">Send email...</string>

</resources>